base/src/test/resources/failure/syntax/let-expr.aya.txt
In file $FILE:6:22 ->

  4 | def id (n : Nat) : Nat => n
  5 | def whichOne : Nat =>
  6 |   let x := unit in id x
                            ^^

Error: Cannot check the expression
         x
       of type
         Unit
       against the type
         Nat

In file $FILE:11:17 ->

   9 |   let
  10 |   | x0 : Nat := 1
  11 |   | x1 : Unit := 2
                        ^^

Error: Cannot check the expression
         2
       of type
         Nat
       against the type
         Unit

2 error(s), 0 warning(s).
What are you doing?
